1999-12-02  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmIconMan/xmanager.c (draw_button): Fix for iconbutton style if
	not following focus

1999-12-01  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmIconMan/xmanager.c (resize_manager):
	Forgot to check if manager actually changed size before resizing
	pixmap, caused window additions to be very slow

1999-11-30  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (AdjustWindow):
	Fixed a core dump if FvwmTaskBarColorset is not used

	* FvwmTaskBar/FvwmTaskBar.c (ProsseMessage):
	Fixed a dynamic style problem

1999-11-30  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmIconMan/ConfigFvwmIconMan:
	* FvwmIconMan/FvwmIconMan.1:
	* FvwmIconMan/readconfig.c (read_in_resources):
	* FvwmIconMan/xmanager.c:
	(draw_button):
	(set_win_iconified): added new option iconColorset and iconstyle

1999-11-30  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmIconBox/FvwmIconBox.c (process_message): let a print stament in

1999-11-30  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmWinList/FvwmWinList.1: fixed typo

	* FvwmIconBox/FvwmIconBox.1:
	* FvwmIconBox/FvwmIconBox.c (animate):
	(process_message):
	(main):
	(ParseOptions): added support for FvwmAnimate

1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/Goodies.c:
	(CreateTipWindow):
	added #ifdef SHAPE

1999-11-30  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (ShowTipWindow):
	Fixed core dump if FvwmTaskBarShowTips is not enabled

1999-11-28  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.1: Fixed description of how FvwmForm automatically
	reads config files.

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.1:
	fixed typo

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/findcmd.pl (getcmd):
	use new name of 'functions' array

1999-11-27  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProssesMessage):
	(LoopOnEvent):
	(HideTaskBar):
	(RevealTaskBar):
	* FvwmTaskBar/FvwmTaskBar.1